<resources>
    <string name="app_name">Fast Diary</string>
    <string name="from_app_name">from Fast Diary</string>
    <string name="app_start">Fast Diary</string>
    <string name="splash_version">V %1$s</string>
    <string name="splash_copyright">Copyright &#169; 2015 SHIWANG All Rights Reserved\nPower by Obsessive and Chris</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_title_show_week">Friday  </string>
    <string name="action_title_search">Search</string>
    <string name="action_title_show_tint">today is</string>
    <string name="action_title_show_day">Sept.17</string>
    <string name="action_register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="searh_tint">Search</string>
    <string name="write_long_diary">write diary</string>
    <string name="feedback_to_developer">Your feedback is highly valued!</string>
    <string name="send_msg">send</string>
    <string name="save_long_diary">SAVE  </string>
    <string name="save">save</string>
    <string name="send_feedback">send  </string>
    <string name="prompt_password">password</string>
    <string name="prompt_name">name</string>
    <string name="prompt_tint">Using text, sound, photographs to record</string>
    <string name="detail_activity_generate_bitmap">Image generating Please wait...</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Settings1</string>
    <string name="action_settings2">Settings2</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cannot_find_pictures">Cannot find pictures</string>

    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>

    <string name="str_recorder_normal">Hold to talk</string>
    <string name="str_recorder_recording">Release to send</string>
    <string name="str_recorder_want_cancel">Release to cancel</string>
    <string name="im_recorder_want_cancel">Slide up to cancel</string>
    <string name="tv_recorder_want_cancel">Slide up to cancel</string>
    <string name="tv_recorder_too_short">Recording time is too short</string>
    <string name="double_click_exit">Press again and leave</string>
    <string name="home_view_title1">TODAY</string>
    <string name="home_view_title2">YORE</string>
    <string name="drawer_view_item1">Log in</string>
    <string name="drawer_view_item2">Register</string>
    <string name="drawer_view_item3">Password</string>
    <string name="drawer_view_item4">Feedback</string>
    <string name="drawer_view_item5">Settings</string>
    <string name="drawer_view_other_item">Version 1.0</string>
    <string name="drawer_view_other_item1">Welcome</string>
    <string name="drawer_view_other_item2">Fast Diary</string>
    <string name="note_content_can_not_be_empty">Diary can not be empty!</string>
    <string name="note_dialog_item1">Delete</string>
    <string name="note_dialog_item2">Modify</string>
    <string name="note_dialog_item3">Share</string>
    <string name="note_dialog_item4">Copy</string>
    <string name="note_dialog_item5">Save to SDCard</string>
    <string name="share_day_card_title">Share Diary</string>

    <string name="feedback_tint">Welcome Feedback</string>

    <string name="show_week1">Monday</string>
    <string name="show_week2">Tuesday</string>
    <string name="show_week3">Wednesday</string>
    <string name="show_week4">Thursday</string>
    <string name="show_week5">Friday</string>
    <string name="show_week6">Saturday</string>
    <string name="show_week7">Sunday</string>

    <string name="settings_share">Share settings</string>
    <string name="settings_share_picture_size">the size of picture when sharing</string>

    <string name="dialog_fragment_take_photo">Take Photo</string>
    <string name="dialog_fragment_gallery">Gallery</string>
    <string name="dialog_fragment_long_diary">Long Diary</string>

    <string name="confirm_text">Confirm  </string>
    <string name="empty_tint">Start a diary now</string>
    <string name="diary_empty_tint">Diary is empty</string>
    <string name="diary_is_empty_tint">Diary is empty</string>
    <string name="share_confirm_text">Confirm</string>
    <string name="share_cancel_text">Cancel</string>
    <string name="output_day_card_title">Export Diary</string>
    <string name="output_day_card_to_sd_title">Export Diary to SD card</string>
    <string name="already_save_to_title">Saved to </string>
    <string name="share_day_card_count_title">%d diaries</string>
    <string name="already_copy_to_clip">copied!</string>
    <string name="about_us">About Us</string>
    <string name="about_fast_diary_tip1">Fast Diary is a tool for writing diary faster. Fast diary inspired by the Chat App we use every day, through chat form to record a diary, it\'s like that we are chatting with ourselves in the future. Using chat dialog with text, images, voice to quickly record the life bit by bit. Then sorted out the diaries in the form of cards for viewing, searching, and also can quickly share and export to third-party platform.</string>
    <string name="about_fast_diary_tip2">Fast Diary overall use of material design style design, interactive and friendly, attractive interface</string>
    <string name="about_fast_diary_tip5">Long microblogging! </string>
    <string name="about_fast_diary_tip6">Minimalist diary!</string>
    <string name="about_fast_diary_tip7">Fast is cool!</string>
    <string name="empty_tips">it\'s empty!</string>
    <string name="feedback_to_developer_2">Click here to leave contact information, further feedback</string>
    <string name="error_tips">net is not work,please try later!</string>
    <string name="about_convert_diary_tips">Convert failed! Please refine your picture in settings and try again!</string>
    <string name="about_fast_diary_tip3">Fast Diary can easily to write long microblogging!</string>
    <string name="about_fast_diary_tip4">Write for the future!</string>
    <string name="about_fast_diary_tip8">Use voice to keep a diary!</string>
    <string name="about_fast_diary_tip9"> Enjoy yourself!</string>
    <string name="about_show_diary_tips">Picture is too long, when the display has been compressed, the original share no compression</string>
    <string name="settings_is_not_showing">OFF</string>
    <string name="settings_is_showing">ON</string>
    <string name="settings_share_picture_add_title">Add Sharing Title</string>
    <string name="settings_share_picture_add_title_hint">Please input the title</string>
    <string name="settings_share_picture_size_tips">Select the size of images</string>
    <string name="settings_share_picture_swith_app_name">Show Fast Diary when sharing</string>
    <string name="settings_share_picture_swith_app_name_tips">whether show the footer(Fast Diary)</string>
    <string name="settings_share_picture_swith_date_title">Show date when sharing</string>
    <string name="settings_share_picture_swith_date_title_tips">whether display date on top right corner</string>
    <string name="tb_munion_tip_download_prefix">loading:</string>
    <string name="empty_tips1">Use dialog to write diary</string>
    <string name="empty_tips2">Slide up to show dialog</string>
    <string name="empty_tips3">Slide down to show sidebar and search</string>
    <string name="empty_tips4">Click + to show other buttons</string>
    <string name="empty_tips5">Use your voice to write diary</string>
    <string name="empty_tips6">Diary convert to a picture when sharing</string>
    <string name="empty_tips7">A Long microblogging tool</string>
</resources>
