<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_search"
            android:title="@string/action_title_search" />
        <item
            android:id="@+id/nav_home_password"
            android:title="@string/drawer_view_item3" />
        <item
            android:id="@+id/nav_messages_back"
            android:title="@string/drawer_view_item4" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/drawer_view_item5" />
    </group>

    <item android:title="@string/drawer_view_other_item">
        <menu>
            <item android:title="@string/app_name" />
        </menu>
    </item>
    <!-- <item
                android:title="@string/drawer_view_other_item1"/>-->

</menu>
