<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <include
        layout="@layout/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/feedback_to_developer"
        android:textColor="@color/sr_color_primary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/umeng_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg_2"
        android:layout_gravity="right"
        android:padding="8dp"
        android:visibility="gone"
        android:text="@string/feedback_to_developer_2"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/feedback_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="@color/alpha_5_sr_color_primary"
        android:hint="@string/feedback_tint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/feedback_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/feedback_tint"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/alpha_60_black"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>