<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.swang.ui.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <include
        layout="@layout/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/prompt_name"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:hint="@string/prompt_name"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pwd"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:hint="@string/prompt_password"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:hint="@string/prompt_password"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>


    <com.rey.material.widget.Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="160dp"
        android:layout_height="@dimen/bt_height"
        android:background="@drawable/button_bg_2"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        app:rd_enable="true" />


</LinearLayout>

