<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/today_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/list_delete_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:visibility="gone"
            android:clickable="true"
            app:borderWidth="0dp"
            />

        <FrameLayout
            android:id="@+id/other_btn_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/list_fab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:clickable="true"
                    app:borderWidth="0dp"
                    app:fabSize="mini" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/list_fab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:clickable="true"
                    app:borderWidth="0dp"
                    app:fabSize="mini" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/list_fab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:clickable="true"
                    app:borderWidth="0dp"
                    app:fabSize="mini" />
            </LinearLayout>
        </FrameLayout>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/alpha_10_sr_color_primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="4dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="2dp"
            android:layout_weight="7">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:hint="@string/prompt_tint"
                android:textColorHint="@color/alpha_30_sr_color_primary"
                android:visibility="visible">

                <EditText
                    android:id="@+id/input_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textMultiLine"
                    android:maxLines="5" />

            </android.support.design.widget.TextInputLayout>

            <cn.swang.ui.view.AudioRecorderButton
                android:id="@+id/audio_recorder_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_recorder_normal"
                android:gravity="center"
                android:minHeight="0dp"
                android:padding="5dp"
                android:text="@string/str_recorder_normal"
                android:textColor="@color/sr_color_primary_dark"
                android:visibility="gone" />
        </FrameLayout>

        <ImageView
            android:id="@+id/send_bt"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:padding="1dp"
            android:src="@drawable/btn_input_list_bg" />

        <TextView
            android:id="@+id/send_bt_tv"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_2"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/send_msg"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:visibility="gone" />

        <!--<com.rey.material.widget.Button-->
        <!--android:id="@+id/send_bt"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="@dimen/bt_height"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/button_bg_2"-->
        <!--android:text="@string/send_msg"-->
        <!--android:textColor="@color/white"-->
        <!--app:rd_enable="true" />-->

    </LinearLayout>
</LinearLayout>
